<resources>
    <string name="app_name">skripsi</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>

    <string name="kelas_1">Kelas 1</string>
    <string name="kelas_2">Kelas 2</string>
    <string name="kelas_3">Kelas 3</string>
    <string name="kelas_4">Kelas 4</string>
    <string name="kelas_5">Kelas 5</string>
    <string name="kelas_6">Kelas 6</string>

    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="terjadi_kesalahan_silahkan_dicoba_kembali">Terjadi kesalahan, Silahkan dicoba kembali</string>
    <string name="name_of_surah">Nama Surah :</string>
    <string name="number_of_ayah">Ayat :</string>
    <string name="place">Tempat :</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>