<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_kelas1"
            android:icon="@drawable/ic_baseline_class_24"
            android:title="@string/kelas_1" />
        <item
            android:id="@+id/nav_kelas2"
            android:icon="@drawable/ic_baseline_class_24"
            android:title="@string/kelas_2" />
        <item
            android:id="@+id/nav_kelas3"
            android:icon="@drawable/ic_baseline_class_24"
            android:title="@string/kelas_3" />

        <item
            android:id="@+id/nav_kelas4"
            android:icon="@drawable/ic_baseline_class_24"
            android:title="@string/kelas_4" />
        <item
            android:id="@+id/nav_kelas5"
            android:icon="@drawable/ic_baseline_class_24"
            android:title="@string/kelas_5" />
        <item
            android:id="@+id/nav_kelas6"
            android:icon="@drawable/ic_baseline_class_24"
            android:title="@string/kelas_6" />
    </group>
</menu>