<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_kelas1">

    <fragment
        android:id="@+id/nav_kelas1"
        android:name="com.seto.skripsi.presentation.ui.fragment.Kelas1Fragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_kelas1" />

    <fragment
        android:id="@+id/nav_kelas2"
        android:name="com.seto.skripsi.presentation.ui.fragment.Kelas2Fragment"
        android:label="@string/kelas_2"
        tools:layout="@layout/fragment_kelas2" />

    <fragment
        android:id="@+id/nav_kelas3"
        android:name="com.seto.skripsi.presentation.ui.fragment.Kelas3Fragment"
        android:label="@string/kelas_3"
        tools:layout="@layout/fragment_kelas3" />

    <fragment
        android:id="@+id/nav_kelas4"
        android:name="com.seto.skripsi.presentation.ui.fragment.Kelas4Fragment"
        android:label="@string/kelas_4"
        tools:layout="@layout/fragment_kelas4" />

    <fragment
        android:id="@+id/nav_kelas5"
        android:name="com.seto.skripsi.presentation.ui.fragment.Kelas5Fragment"
        android:label="@string/kelas_5"
        tools:layout="@layout/fragment_kelas5" />

    <fragment
        android:id="@+id/nav_kelas6"
        android:name="com.seto.skripsi.presentation.ui.fragment.Kelas6Fragment"
        android:label="@string/kelas_6"
        tools:layout="@layout/fragment_kelas6" />
</navigation>